<resources>
    <string name="app_name">To-Do List</string>
    <string name="enter_button">Enter</string>
    <string name="edit_text">Enter text</string>
    <string name="action_addNew">Add New</string>
    <string name="action_remove">Complete/Remove</string>
    <string name="action_save">Save</string>
    <string name="action_about">About</string>
    <string name="action_faq">FAQ/Directions</string>
    <string name="current_text">Any thing</string>
    <string name="about_text">This App is created by Li Dai to familiarize myself with Android development as well as a project for a job application process.</string>
    <string name="faq_text">Press + sign to add new tasks.\nLong hold on task to delete. \nOther functions not yet complete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_content">ContentActivity</string>
</resources>
