<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:title="@string/action_addNew"
        android:icon="@drawable/add"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_remove"
        android:title="@string/action_remove"
        android:icon="@drawable/done"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/save"
        app:showAsAction="always"/>


    <item android:id="@+id/about"
        android:title="@string/action_about"
        app:showAsAction="never"/>

    <item android:id="@+id/faq"
        android:title="@string/action_faq"
        app:showAsAction="never"/>

</menu>